# Research-Wiki

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agents-guide.md  architecture.md  boundary-rules.md  cli-reference.md  export-protocol.md  import-bib.md  lifecycle.md  mcp-server.md  monorepo.md  promotion-protocol.md
docs/recipes/: bib-to-kb.md
examples/: README.md
examples/demo_direction/: .lgrlw.toml
examples/demo_direction/literature-kb/00_System/: export_protocol.md  index.md  log.md  verification_policy.md
examples/demo_direction/literature-kb/01_Raw/metadata/: asai-2023-self-rag-learning-to-retrieve-generate-and-critiqu.json  karpukhin-2020-dense-passage-retrieval-for-open-domain-quest.json  lewis-2020-retrieval-augmented-generation-for-knowledge-inte.json
examples/demo_direction/literature-kb/06_Exports/paper_001_2026-05-02/: export_manifest.json
examples/demo_direction/literature-kb/06_Exports/paper_001_2026-05-02/02_Literature/Papers/: asai-2023-self-rag-learning-to-retrieve-generate-and-critiqu.md  karpukhin-2020-dense-passage-retrieval-for-open-domain-quest.md
examples/demo_direction/literature-kb/06_Exports/paper_001_2026-05-02/03_Field_Structure/: Overview.md
examples/demo_direction/literature-kb/06_Exports/paper_001_2026-05-03/: export_manifest.json
examples/demo_direction/literature-kb/06_Exports/paper_001_2026-05-03/03_Field_Structure/: Dataset_Benchmark_Map.md  Method_Taxonomy.md  Metric_Map.md
examples/demo_direction/literature-kb/06_Exports/paper_001_2026-05-03/05_Evidence/: Limitations_Map.md  Open_Problems.md
examples/demo_direction/research-workspaces/: README.md
examples/demo_direction/research-workspaces/paper_001/00_Project/: finalized_idea.md  paper_status.md  research_problem.md
examples/demo_direction/research-workspaces/paper_001/01_KB_Exports/paper_001_2026-05-03/02_Literature/Papers/: lewis-2020-retrieval-augmented-generation-for-knowledge-inte.md
examples/demo_direction/research-workspaces/paper_001/01_KB_Exports/paper_001_2026-05-03/03_Field_Structure/: Problem_Evolution.md  Timeline.md
examples/demo_direction/research-workspaces/paper_001/01_KB_Exports/paper_001_2026-05-03/05_Evidence/: Evidence_Map.md
examples/demo_direction/research-workspaces/paper_001/02_Idea_and_Method/: assumptions.md
examples/demo_direction/research-workspaces/paper_001/03_Experiments/: experiment_plan.md  metrics.md
examples/demo_direction/research-workspaces/paper_001/04_Writing/: full_draft.md  paper_narrative.md  related_work.md
examples/demo_direction/research-workspaces/paper_001/05_Review/: rebuttal.md  revision_plan.md  submitted_version.md
examples/demo_direction/research-workspaces/paper_001/06_Promotion/: add_back_to_kb_plan.md  promotion_checklist.md
schemas/: export_manifest.schema.json  import_manifest.schema.json  paper.schema.json  paper_metadata.schema.json  project_config.schema.json  workspace_paper.schema.json
src/lgrlw/: __init__.py  __main__.py  _resources.py  _slug.py  cli.py  config.py  fs.py  monorepo.py  paths.py  schemas.py
src/lgrlw/commands/: __init__.py  add_direction.py  add_literature.py  attach_pdf.py  convert_pdf.py  export_pack.py  import_bib.py  init.py  lint.py  mcp.py  new_workspace.py  promote.py
src/lgrlw/convert/: __init__.py  base.py  mineru.py  run.py  stub.py
src/lgrlw/export/: __init__.py  pack.py
src/lgrlw/fetchers/: __init__.py  arxiv.py  base.py  crossref.py  errors.py  openalex.py  semanticscholar.py
src/lgrlw/ingest/: __init__.py  attach.py  bibtex.py  manifest.py  pdf_download.py  pdf_match.py  run.py
src/lgrlw/lint/: __init__.py  boundary.py  manifest.py  schema.py  structure.py
src/lgrlw/mcp/: __init__.py  server.py
src/lgrlw/promote/: __init__.py  run.py
src/lgrlw/render/: __init__.py  paper_card.py
templates/literature-kb/00_System/: KB_AGENTS.md  add_literature_protocol.md  log.md  verification_policy.md
templates/literature-kb/03_Field_Structure/: Overview.md
templates/literature-kb/05_Evidence/: Contradictions.md
templates/research-workspace/idea/: IDEA_AGENTS.md  workspace_log.md
templates/research-workspace/idea/00_Context/: method_taxonomy_snapshot.md  relevant_gaps.md
templates/research-workspace/idea/01_Idea/: design_space.md  hypotheses.md  idea_notes.md  novelty_risk.md
templates/research-workspace/idea/02_Method/: assumptions.md  expected_advantages.md  method_sketch.md
templates/research-workspace/paper/00_Project/: PAPER_AGENTS.md  contribution_claims.md  method_summary.md  paper_status.md
templates/research-workspace/paper/02_Idea_and_Method/: design_choices.md  idea_history.md  novelty_risk.md
templates/research-workspace/paper/03_Experiments/: analysis.md  baselines.md  results.md
templates/research-workspace/paper/04_Writing/: experiments.md  introduction.md  method.md
templates/research-workspace/paper/05_Review/: reviews.md
templates/research-workspace/paper/06_Promotion/: acceptance_record.md  final_metadata.md  promotion_checklist.md
tests/: conftest.py  test_add_literature_arxiv.py  test_add_literature_doi.py  test_add_literature_manual.py  test_add_literature_openalex.py  test_add_literature_pdf.py  test_add_literature_ss.py  test_attach_pdf.py  test_convert_pdf.py  test_e2e_guide.py  test_export_pack.py  test_fetchers.py  test_import_bib.py  test_init.py  test_lint.py  test_mcp.py  test_monorepo.py  test_new_workspace.py  test_pdf_download.py  test_promote.py
tests/fixtures/: sample_import.bib
