[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "lgrlw"
version = "0.5.0.dev0"
description = "Literature-Grounded Research Lifecycle Wiki — a long-horizon research operating system with strict KB/Workspace separation and immutable export snapshots."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "LGRLW contributors" },
]
keywords = [
  "research",
  "knowledge-base",
  "literature",
  "obsidian",
  "academic-writing",
  "llm-agents",
  "rag",
  "paper-management",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  # Runtime is kept deliberately small; no database or vector store.
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7",
  "PyYAML>=6.0.1",
  "python-slugify>=8.0.4",
  "jinja2>=3.1.4",
  "httpx>=0.27",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
# v0.3: opt-in Model Context Protocol server. The core `lgrlw` install
# does *not* depend on the `mcp` package; users who want `lgrlw mcp
# serve` install the `mcp` extra.
mcp = [
  "mcp>=1.0",
]
# v0.4: opt-in BibTeX batch ingestion. ``lgrlw import-bib`` relies on
# ``bibtexparser`` for robust .bib parsing, but the core install stays
# minimal for users who only use ``add-literature``.
bib = [
  "bibtexparser>=1.4,<2.0",
]
# v0.5: opt-in MinerU backend for ``lgrlw convert-pdf``. MinerU is a
# heavyweight PDF extractor; users who only need the zero-dependency
# ``stub`` backend do not need this extra.
mineru = [
  "magic-pdf>=0.6",
]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
  "twine>=5.0",
  "types-PyYAML",
  "mcp>=1.0",
  "bibtexparser>=1.4,<2.0",
]

[project.scripts]
lgrlw = "lgrlw.cli:app"

[project.urls]
Homepage = "https://github.com/ConmuYan/Research-Wiki"
Documentation = "https://github.com/ConmuYan/Research-Wiki/tree/main/docs"
Repository = "https://github.com/ConmuYan/Research-Wiki"
Issues = "https://github.com/ConmuYan/Research-Wiki/issues"
Changelog = "https://github.com/ConmuYan/Research-Wiki/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/lgrlw"]

# Embed templates/schemas inside the wheel so `importlib.resources` can locate
# them after a `pip install`.  In editable/dev installs we fall back to the
# repository-root copies via lgrlw._resources.templates_root().
[tool.hatch.build.targets.wheel.force-include]
"templates" = "lgrlw/_templates"
"schemas"   = "lgrlw/_schemas"

[tool.hatch.build.targets.sdist]
include = [
  "src/lgrlw",
  "templates",
  "schemas",
  "docs",
  "README.md",
  "README.zh-CN.md",
  "LICENSE",
  "CODE_OF_CONDUCT.md",
  "CHANGELOG.md",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:bibtexparser.*",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # pycodestyle + pyflakes
  "I",            # isort
  "B",            # bugbear
  "UP",           # pyupgrade
  "N",            # pep8-naming
  "SIM",          # simplify
  "PL",           # pylint subset
  "RUF",          # ruff specific
]
ignore = [
  "PLR0913",  # too many arguments (CLI commands often have many)
  "PLR2004",  # magic values in tests
  "E501",     # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# PLR0915 "too many statements" is noise in long, sequential integration
# tests such as tests/test_e2e_guide.py where the linear flow IS the
# story being verified.
"tests/**/*.py" = ["PLR2004", "PLR0915", "S101"]
"src/lgrlw/mcp/server.py" = ["PLR0915"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["lgrlw"]
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["bibtexparser.*", "magic_pdf.*", "slugify.*"]
ignore_missing_imports = true
